--- a/index.html
+++ b/index.html
@@ -1,47 +1,192 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="description" content="Game of Thrones web mockup">
-    <meta name="keywords" content="HTML,CSS,JQUERY,JavaScript,Game of Thrones">
-    <meta name="author" content="Khal Drogo">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!-- Main CSS -->
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
-
-    <title>Game of Thrones Mockup</title>
-  </head>
-  <body>
-
-    <main>
-        <header>
-            <nav></nav>
-        </header>
-        <section class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <h1 class="text-center">Game of Thrones Starter</h1>
-            </div>
-        </section>
-        <footer>
-            <nav></nav>
-        </footer>
-        <!-- Uncomment the img to see it working -->
-        <!-- To link to images, example the tyrion-media.jpg file can be linked like so: -->
-        <!-- <img src="media/tyrion-media.jpg" alt="Tyrion Lannister Photo"> -->
-        <!-- Since the tyrion-media.jpg file is in the media folder, we must follow the path to that files source -->
-    </main>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <!-- Main JavaScript -->
-    <script src="js/main.js"></script>
-  </body>
-</html>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="description" content="Game of Thrones web mockup">
+        <meta name="keywords" content="HTML,CSS,JQUERY,JavaScript,Game of Thrones">
+        <meta name="author" content="Khal Drogo">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <!-- Main CSS -->
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/main.css">
+        <title>Game of Thrones Mockup</title>
+    </head>
+    <body>
+        <main>
+            <header>
+                <nav class="navbar fixed-top">
+                    <a href="#"><img class="logo" src="media/got-logo.png"/></a>
+                    <ul>
+                        <li><a href="#" title="Home">Home</a></li>
+                        <li><a href="#" title="People">People</a></li>
+                        <li><a href="#" title="Houses">Houses</a></li>
+                        <li><a href="#" title="Map">Map</a></li>
+                        <li><a href="#" title="Histories">Histories</a></li>
+                        <li><a href="#" title="Settings">Settings</a></li>
+                    </ul>
+                    </nav>
+                </header>
+                <section class="container">
+                    <section class="hero">
+                        <div>
+                            <h1>Season 7 Episode 7</h1>
+                            <h2>The Dragon and the Wolf</h2>
+                        </div>
+                    </section>
+                    <section class="inside">
+                        <div>
+                            <h1>Inside</h1>
+                        </div>
+                        <div>
+                            <h1>What Honor Demands</h1>
+                            <a href="#">Read the Synopsis</a>
+                        </div>
+                    </section>
+                    <section>
+                        <article>
+                            <figure>
+                                <h1><a href="#">Inside the Episode</a></h1>
+                                <p>Series creators D.B. Weiss and David Benioff examine Jaime's decision.</p>
+                            </figure>
+                            <figure>
+                                <h1><a href="#">Worlds Collide</a></h1>
+                                <p>The cast and crew take you inside the dragonpit.</p>
+                            </figure>
+                            <figure>
+                                <h1><a href="#">A Union of Ice and Fire</a></h1>
+                                <p>The cast discusses Jon and Daenerys' connection.</p>
+                            </figure>
+                            <figure>
+                                <h1><a href="#">Don't Miss a Moment</a></h1>
+                                <p>Stream every episode on HBO NOW.</p>
+                            </figure>
+                        </article>
+                    </section>
+                    <section class="row">
+                        <q>"She needs me now."</q>
+                        <p>-Theon Greyjoy</p>
+                    </section>
+                    <section class="people">
+                        <div><h1>People</h1></div>
+                        <div>
+                            <figure>
+                                <figcaption>
+                                <h2>Tyrion</h2>
+                                <h1>Lannister</h1>
+                                <a href="#">+</a>
+                                </figcaption>
+                            </figure>
+                            <figure>
+                                <figcaption>
+                                <h2>Euron</h2>
+                                <h1>Greyjoy</h1>
+                                <a href="#">+</a>
+                                </figcaption>
+                            </figure>
+                            <figure>
+                                <figcaption>
+                                <h2>Podrick</h2>
+                                <h1>Payne</h1>
+                                <a href="#">+</a>
+                                </figcaption>
+                            </figure>
+                            <figure>
+                                <figcaption>
+                                <h2>Yohn</h2>
+                                <h1>Royce</h1>
+                                <a href="#">+</a>
+                                </figcaption>
+                            </figure>
+                        </div>
+                    </section>
+                    <section class="quote">
+                        <q>"There is only one war that mattersL: The great war. And it is here."</q>
+                        <p>-Jon Snow</p>
+                    </section>
+                    <section class="galleries">
+                        <div><h1>Galleries</h1></div>
+                        <div class="gallery">
+                            <div class="gallery-title">
+                                <h1>The Dragon and the Wolf</h1>
+                            </div>
+                            <div class="slider">
+                            </div>
+                        </div>
+                    </section>
+                    <section class="quote">
+                        <q>"This house goes beyond houses nad honor and oaths."</q>
+                        <p>-Brienne Tarth</p>
+                    </section>
+                    <section class="locations">
+                        <div class="title"><h1>Locations</h1></div>
+                        <div class="explore-map">
+                            <a href="#">Explore the Map</a>
+                        </div>
+                        <div>
+                        </div>
+                    </section>
+                    <section class="quote">
+                        <q>"The lone wolf dies, but the pack survives."</q>
+                        <p>-Sansa Stark</p>
+                    </section>
+                    <section class="explore">
+                        <div class="title">
+                            <h1>Explore</h1>
+                        </div>
+                        <div class="explore-items">
+                            <ul>
+                                <li>
+                                    <a href="#"></a>
+                                    <img src="#"/>
+                                    <p>Map</p>
+                                </li>
+                                <li>
+                                    <a href="#"></a>
+                                    <img src="#"/>
+                                    <p>Houses</p>
+                                </li>
+                                <li>
+                                    <a href="#"></a>
+                                    <img src="#"/>
+                                    <p>People</p>
+                                </li>
+                                <li>
+                                    <a href="#"></a>
+                                    <img src="#"/>
+                                    <p>Histories</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="explore-episodes">
+                        </div>
+                    </section>
+                </section>
+                <footer>
+                    <nav>
+                        <ul>
+                            <li><a href="#">HBO.com</a></li>
+                            <li><a href="#">HBO NOW</a></li>
+                            <li><a href="#">HBO GO</a></li>
+                            <li><a href="#">HBO Connect</a></li>
+                            <li><a href="#">HBO Shop</a></li>
+                            <li><a href="#">Making Game of Thrones</a></li>
+                        </ul>
+                    </nav>
+                </footer>
+                <!-- Uncomment the img to see it working -->
+                <!-- To link to images, example the tyrion-media.jpg file can be linked like so: -->
+                <!-- <img src="media/tyrion-media.jpg" alt="Tyrion Lannister Photo"> -->
+                <!-- Since the tyrion-media.jpg file is in the media folder, we must follow the path to that files source -->
+            </main>
+            <!-- Optional JavaScript -->
+            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+            <!-- Main JavaScript -->
+            <script src="js/main.js"></script>
+        </body>
+    </html>
