added background img spans

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
         <!-- Main CSS -->
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/main.css">
-        <title>Game of Thrones Mockup</title>
+        <!-- <title>Game of Thrones Mockup</title> -->
+        <!-- Icons -->
+        <link rel="shortcut icon" type="image/x-icon" href="http://awseb-e-p-awsebloa-tg7s2k8kzxn3-847817325.us-west-2.elb.amazonaws.com/favicon.ico">
+    <link rel="icon" href="http://awseb-e-p-awsebloa-tg7s2k8kzxn3-847817325.us-west-2.elb.amazonaws.com/images/favicon-16.png" sizes="16x16">
+    <link rel="icon" href="http://awseb-e-p-awsebloa-tg7s2k8kzxn3-847817325.us-west-2.elb.amazonaws.com/images/favicon-24.png" sizes="24x24">
+    <link rel="icon" href="http://awseb-e-p-awsebloa-tg7s2k8kzxn3-847817325.us-west-2.elb.amazonaws.com/images/favicon-32.png" sizes="32x32">
     </head>
     <body>
         <main>
@@ -30,22 +35,23 @@
                     </nav>
                 </header>
                 <section class="container">
-                    <section class="hero">
+                    <section id="hero" class="img-span cinzel">
                         <div>
+                            <hr></hr>
                             <h1>Season 7 Episode 7</h1>
                             <h2>The Dragon and the Wolf</h2>
                         </div>
                     </section>
-                    <section class="inside">
+                    <section class="cinzel">
                         <div>
                             <h1>Inside</h1>
                         </div>
-                        <div>
+                        <div id="inside" class="img-span">
                             <h1>What Honor Demands</h1>
                             <a href="#">Read the Synopsis</a>
                         </div>
                     </section>
-                    <section>
+                    <section class="explore-episode">
                         <article>
                             <figure>
                                 <h1><a href="#">Inside the Episode</a></h1>
@@ -65,7 +71,7 @@
                             </figure>
                         </article>
                     </section>
-                    <section class="row">
+                    <section id="greyjoy" class="img-span quote">
                         <q>"She needs me now."</q>
                         <p>-Theon Greyjoy</p>
                     </section>
@@ -102,7 +108,7 @@
                             </figure>
                         </div>
                     </section>
-                    <section class="quote">
+                    <section id="jon" class="img-span quote">
                         <q>"There is only one war that mattersL: The great war. And it is here."</q>
                         <p>-Jon Snow</p>
                     </section>
@@ -116,7 +122,7 @@
                             </div>
                         </div>
                     </section>
-                    <section class="quote">
+                    <section id="brienne" class="img-span quote">
                         <q>"This house goes beyond houses nad honor and oaths."</q>
                         <p>-Brienne Tarth</p>
                     </section>
@@ -128,7 +134,7 @@
                         <div>
                         </div>
                     </section>
-                    <section class="quote">
+                    <section id="sansa" class="img-span quote">
                         <q>"The lone wolf dies, but the pack survives."</q>
                         <p>-Sansa Stark</p>
                     </section>
