added most img layout components, need to fix img grids though

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <!-- <title>Game of Thrones Mockup</title> -->
         <!-- Icons -->
         <link rel="shortcut icon" type="image/x-icon" href="http://awseb-e-p-awsebloa-tg7s2k8kzxn3-847817325.us-west-2.elb.amazonaws.com/favicon.ico">
-    <link rel="icon" href="http://awseb-e-p-awsebloa-tg7s2k8kzxn3-847817325.us-west-2.elb.amazonaws.com/images/favicon-16.png" sizes="16x16">
-    <link rel="icon" href="http://awseb-e-p-awsebloa-tg7s2k8kzxn3-847817325.us-west-2.elb.amazonaws.com/images/favicon-24.png" sizes="24x24">
-    <link rel="icon" href="http://awseb-e-p-awsebloa-tg7s2k8kzxn3-847817325.us-west-2.elb.amazonaws.com/images/favicon-32.png" sizes="32x32">
+        <link rel="icon" href="http://awseb-e-p-awsebloa-tg7s2k8kzxn3-847817325.us-west-2.elb.amazonaws.com/images/favicon-16.png" sizes="16x16">
+        <link rel="icon" href="http://awseb-e-p-awsebloa-tg7s2k8kzxn3-847817325.us-west-2.elb.amazonaws.com/images/favicon-24.png" sizes="24x24">
+        <link rel="icon" href="http://awseb-e-p-awsebloa-tg7s2k8kzxn3-847817325.us-west-2.elb.amazonaws.com/images/favicon-32.png" sizes="32x32">
     </head>
     <body>
         <main>
@@ -32,167 +32,210 @@
                         <li><a href="#" title="Histories">Histories</a></li>
                         <li><a href="#" title="Settings">Settings</a></li>
                     </ul>
-                    </nav>
-                </header>
-                <section class="container">
-                    <section id="hero" class="img-span cinzel">
-                        <div>
-                            <hr></hr>
-                            <h1>Season 7 Episode 7</h1>
-                            <h2>The Dragon and the Wolf</h2>
-                        </div>
-                    </section>
-                    <section class="cinzel">
-                        <div>
-                            <h1>Inside</h1>
-                        </div>
-                        <div id="inside" class="img-span">
+                </nav>
+            </header>
+            <section class="container col-12 no-gutters">
+                <section id="hero" class="img-span cinzel row align-items-center">
+                    <div class="col-4 offset-1">
+                        <hr></hr>
+                        <h1>Season 7 Episode 7</h1>
+                        <h2>The Dragon and the Wolf</h2>
+                    </div>
+                </section>
+                <section class="cinzel">
+                    <div id="inside-heading" class="row justify-content-start">
+                        <h1>Inside</h1>
+                    </div>
+                    <div id="inside" class="img-span row align-items-center">
+                        <div class="col-4 offset-1">
                             <h1>What Honor Demands</h1>
                             <a href="#">Read the Synopsis</a>
                         </div>
-                    </section>
-                    <section class="explore-episode">
-                        <article>
-                            <figure>
-                                <h1><a href="#">Inside the Episode</a></h1>
-                                <p>Series creators D.B. Weiss and David Benioff examine Jaime's decision.</p>
-                            </figure>
-                            <figure>
-                                <h1><a href="#">Worlds Collide</a></h1>
-                                <p>The cast and crew take you inside the dragonpit.</p>
-                            </figure>
-                            <figure>
-                                <h1><a href="#">A Union of Ice and Fire</a></h1>
-                                <p>The cast discusses Jon and Daenerys' connection.</p>
-                            </figure>
-                            <figure>
-                                <h1><a href="#">Don't Miss a Moment</a></h1>
-                                <p>Stream every episode on HBO NOW.</p>
-                            </figure>
-                        </article>
-                    </section>
-                    <section id="greyjoy" class="img-span quote">
+                    </div>
+                </section>
+                <section class="row explore-episode justify-content-between">
+                    <div class="col-1"></div>
+                    <figure class="col-2">
+                        <a href="#"><img src="media/explore-1.jpg"/></a>
+                        <figcaption>
+                        <h1><a href="#">Inside the Episode</a></h1>
+                        <p>Series creators D.B. Weiss and David Benioff examine Jaime's decision.</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="col-2">
+                        <a href="#"><img src="media/explore-2.jpg"/></a>
+                        <figcaption>
+                        <h1><a href="#">Worlds Collide</a></h1>
+                        <p>The cast and crew take you inside the dragonpit.</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="col-2">
+                        <a href="#"><img src="media/explore-3.jpg"/></a>
+                        <figcaption>
+                        <h1><a href="#">A Union of Ice and Fire</a></h1>
+                        <p>The cast discusses Jon and Daenerys' connection.</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="col-2">
+                        <a href="#"><img src="media/explore-4.jpg"/></a>
+                        <figcaption>
+                        <h1><a href="#">Don't Miss a Moment</a></h1>
+                        <p>Stream every episode on HBO NOW.</p>
+                        </figcaption>
+                    </figure>
+                    <div class="col-1"></div>
+                </section>
+                <section id="greyjoy" class="row img-span quote cinzel align-items-center">
+                    <div class="col-4 offset-1">
                         <q>"She needs me now."</q>
                         <p>-Theon Greyjoy</p>
-                    </section>
-                    <section class="people">
-                        <div><h1>People</h1></div>
-                        <div>
-                            <figure>
-                                <figcaption>
-                                <h2>Tyrion</h2>
-                                <h1>Lannister</h1>
-                                <a href="#">+</a>
-                                </figcaption>
-                            </figure>
-                            <figure>
-                                <figcaption>
-                                <h2>Euron</h2>
-                                <h1>Greyjoy</h1>
-                                <a href="#">+</a>
-                                </figcaption>
-                            </figure>
-                            <figure>
-                                <figcaption>
-                                <h2>Podrick</h2>
-                                <h1>Payne</h1>
-                                <a href="#">+</a>
-                                </figcaption>
-                            </figure>
-                            <figure>
-                                <figcaption>
-                                <h2>Yohn</h2>
-                                <h1>Royce</h1>
-                                <a href="#">+</a>
-                                </figcaption>
-                            </figure>
+                    </div>
+                </section>
+                <section class="people">
+                    <div class="row">
+                        <h1 class="cinzel">People</h1>
+                    </div>
+                    <div class="row">
+                        <div class="col-8">
+                            <div class="row">
+                                <figure id="cersei" class="col-4">
+                                    <a href="#"><img src="media/cersei.jpg"/></a>
+                                    <figcaption>
+                                    <h2>Cersei</h2>
+                                    <h1>Lannister</h1>
+                                    <a href="#">EXPLORE +</a>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div class="row">
+                                <figure id="tyrion" class="col-2">
+                                     <a href="#"><img src="media/tyrion.jpg"/></a>
+                                    <figcaption>
+                                    <h2>Tyrion</h2>
+                                    <h1>Lannister</h1>
+                                    <a href="#">+</a>
+                                    </figcaption>
+                                </figure>
+                                <figure id="euron" class="col-2">
+                                     <a href="#"><img src="media/euron.jpg"/></a>
+                                    <figcaption>
+                                    <h2>Euron</h2>
+                                    <h1>Greyjoy</h1>
+                                    <a href="#">+</a>
+                                    </figcaption>
+                                </figure>
+                                <div class="w-100"></div>
+                                <figure id="podrick" class="col-2">
+                                     <a href="#"><img src="media/podrick.jpg"/></a>
+                                    <figcaption>
+                                    <h2>Podrick</h2>
+                                    <h1>Payne</h1>
+                                    <a href="#">+</a>
+                                    </figcaption>
+                                </figure>
+                                <figure id="yohn" class="col-2">
+                                     <a href="#"><img src="media/yohn.jpg"/></a>
+                                    <figcaption>
+                                    <h2>Yohn</h2>
+                                    <h1>Royce</h1>
+                                    <a href="#">+</a>
+                                    </figcaption>
+                                </figure>
+                            </div>
                         </div>
-                    </section>
-                    <section id="jon" class="img-span quote">
-                        <q>"There is only one war that mattersL: The great war. And it is here."</q>
+                    </div>
+                </section>
+                <section id="jon" class="row img-span quote cinzel align-items-center">
+                    <div class="col-4 offset-1">
+                        <q>"There is only one war that matters: The great war. And it is here."</q>
                         <p>-Jon Snow</p>
-                    </section>
-                    <section class="galleries">
-                        <div><h1>Galleries</h1></div>
-                        <div class="gallery">
-                            <div class="gallery-title">
-                                <h1>The Dragon and the Wolf</h1>
-                            </div>
-                            <div class="slider">
-                            </div>
+                    </div>
+                </section>
+                <section class="galleries">
+                    <div><h1>Galleries</h1></div>
+                    <div class="gallery">
+                        <div class="gallery-title">
+                            <h1>The Dragon and the Wolf</h1>
                         </div>
-                    </section>
-                    <section id="brienne" class="img-span quote">
+                        <div class="slider">
+                        </div>
+                    </div>
+                </section>
+                <section id="brienne" class="row img-span quote cinzel align-items-center">
+                    <div class="col-4 offset-1">
                         <q>"This house goes beyond houses nad honor and oaths."</q>
                         <p>-Brienne Tarth</p>
-                    </section>
-                    <section class="locations">
-                        <div class="title"><h1>Locations</h1></div>
-                        <div class="explore-map">
-                            <a href="#">Explore the Map</a>
-                        </div>
-                        <div>
-                        </div>
-                    </section>
-                    <section id="sansa" class="img-span quote">
+                    </div>
+                </section>
+                <section class="locations">
+                    <div class="title"><h1>Locations</h1></div>
+                    <div class="explore-map">
+                        <a href="#">Explore the Map</a>
+                    </div>
+                    <div>
+                    </div>
+                </section>
+                <section id="sansa" class="row img-span quote cinzel align-items-center">
+                    <div class="col-4 offset-1">
                         <q>"The lone wolf dies, but the pack survives."</q>
                         <p>-Sansa Stark</p>
-                    </section>
-                    <section class="explore">
-                        <div class="title">
-                            <h1>Explore</h1>
-                        </div>
-                        <div class="explore-items">
-                            <ul>
-                                <li>
-                                    <a href="#"></a>
-                                    <img src="#"/>
-                                    <p>Map</p>
-                                </li>
-                                <li>
-                                    <a href="#"></a>
-                                    <img src="#"/>
-                                    <p>Houses</p>
-                                </li>
-                                <li>
-                                    <a href="#"></a>
-                                    <img src="#"/>
-                                    <p>People</p>
-                                </li>
-                                <li>
-                                    <a href="#"></a>
-                                    <img src="#"/>
-                                    <p>Histories</p>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="explore-episodes">
-                        </div>
-                    </section>
+                    </div>
                 </section>
-                <footer>
-                    <nav>
+                <section class="explore">
+                    <div class="title">
+                        <h1>Explore</h1>
+                    </div>
+                    <div class="explore-items">
                         <ul>
-                            <li><a href="#">HBO.com</a></li>
-                            <li><a href="#">HBO NOW</a></li>
-                            <li><a href="#">HBO GO</a></li>
-                            <li><a href="#">HBO Connect</a></li>
-                            <li><a href="#">HBO Shop</a></li>
-                            <li><a href="#">Making Game of Thrones</a></li>
+                            <li>
+                                <a href="#"></a>
+                                <img src="#"/>
+                                <p>Map</p>
+                            </li>
+                            <li>
+                                <a href="#"></a>
+                                <img src="#"/>
+                                <p>Houses</p>
+                            </li>
+                            <li>
+                                <a href="#"></a>
+                                <img src="#"/>
+                                <p>People</p>
+                            </li>
+                            <li>
+                                <a href="#"></a>
+                                <img src="#"/>
+                                <p>Histories</p>
+                            </li>
                         </ul>
-                    </nav>
-                </footer>
-                <!-- Uncomment the img to see it working -->
-                <!-- To link to images, example the tyrion-media.jpg file can be linked like so: -->
-                <!-- <img src="media/tyrion-media.jpg" alt="Tyrion Lannister Photo"> -->
-                <!-- Since the tyrion-media.jpg file is in the media folder, we must follow the path to that files source -->
-            </main>
-            <!-- Optional JavaScript -->
-            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-            <!-- Main JavaScript -->
-            <script src="js/main.js"></script>
-        </body>
-    </html>
+                    </div>
+                    <div class="explore-episodes">
+                    </div>
+                </section>
+            </section>
+            <footer>
+                <nav>
+                    <ul>
+                        <li><a href="#">HBO.com</a></li>
+                        <li><a href="#">HBO NOW</a></li>
+                        <li><a href="#">HBO GO</a></li>
+                        <li><a href="#">HBO Connect</a></li>
+                        <li><a href="#">HBO Shop</a></li>
+                        <li><a href="#">Making Game of Thrones</a></li>
+                    </ul>
+                </nav>
+            </footer>
+            <!-- Uncomment the img to see it working -->
+            <!-- To link to images, example the tyrion-media.jpg file can be linked like so: -->
+            <!-- <img src="media/tyrion-media.jpg" alt="Tyrion Lannister Photo"> -->
+            <!-- Since the tyrion-media.jpg file is in the media folder, we must follow the path to that files source -->
+        </main>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <!-- Main JavaScript -->
+        <script src="js/main.js"></script>
+    </body>
+</html>
