--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     <div class="row">
                         <div class="col-8">
                             <div class="row">
+<!-- these should be bootstrap cards not figures ugh read the homework assignment u shithead -->
                                 <figure id="cersei" class="col-4">
                                     <a href="#"><img src="media/cersei.jpg"/></a>
                                     <figcaption>
