changed figures to bootstrap cards

--- a/index.html
+++ b/index.html
@@ -91,57 +91,58 @@
                         <p>-Theon Greyjoy</p>
                     </div>
                 </section>
+                <!-- People Section -->
                 <section class="people">
-                    <div class="row">
+                    <div class="container">
                         <h1 class="cinzel">People</h1>
-                    </div>
-                    <div class="row">
-                        <div class="col-8">
-                            <div class="row">
-<!-- these should be bootstrap cards not figures ugh read the homework assignment u shithead -->
-                                <figure id="cersei" class="col-4">
-                                    <a href="#"><img src="media/cersei.jpg"/></a>
-                                    <figcaption>
-                                    <h2>Cersei</h2>
-                                    <h1>Lannister</h1>
-                                    <a href="#">EXPLORE +</a>
-                                    </figcaption>
-                                </figure>
+                        <div class="container">
+                            <div class="col-5">
+                                <div class="card">
+                                    <img class="card-img-top" src="media/cersei.jpg" alt="Cersei Lannister">
+                                    <div class="card-img-overlay">
+                                        <h1 id="cersei-h1" class="card-text">Cersei</h1>
+                                        <h2 id="cersei-h2" class="card-text">Lannister</h2>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="row">
-                                <figure id="tyrion" class="col-2">
-                                     <a href="#"><img src="media/tyrion.jpg"/></a>
-                                    <figcaption>
-                                    <h2>Tyrion</h2>
-                                    <h1>Lannister</h1>
-                                    <a href="#">+</a>
-                                    </figcaption>
-                                </figure>
-                                <figure id="euron" class="col-2">
-                                     <a href="#"><img src="media/euron.jpg"/></a>
-                                    <figcaption>
-                                    <h2>Euron</h2>
-                                    <h1>Greyjoy</h1>
-                                    <a href="#">+</a>
-                                    </figcaption>
-                                </figure>
+                            <div class="card-deck">
+                                <div class="col-3">
+                                    <div id="cersei-card" class="card">
+                                        <img class="card-img-top" src="media/tyrion.jpg" alt="Tyrion Lannister">
+                                        <div class="card-block">
+                                            <h2 class="card-text">Tyrion</h2>
+                                            <h1 class="card-text">Lannister</h1>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-3">
+                                    <div class="card">
+                                        <img class="card-img-top" src="media/euron.jpg" alt="Euron Greyjoy">
+                                        <div class="card-block">
+                                            <h2 class="card-text">Euron</h2>
+                                            <h1 class="card-text">Greyjoy</h1>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="w-100"></div>
-                                <figure id="podrick" class="col-2">
-                                     <a href="#"><img src="media/podrick.jpg"/></a>
-                                    <figcaption>
-                                    <h2>Podrick</h2>
-                                    <h1>Payne</h1>
-                                    <a href="#">+</a>
-                                    </figcaption>
-                                </figure>
-                                <figure id="yohn" class="col-2">
-                                     <a href="#"><img src="media/yohn.jpg"/></a>
-                                    <figcaption>
-                                    <h2>Yohn</h2>
-                                    <h1>Royce</h1>
-                                    <a href="#">+</a>
-                                    </figcaption>
-                                </figure>
+                                <div class="col-3">
+                                    <div class="card">
+                                        <img class="card-img-top" src="media/podrick.jpg" alt="Podrick Payne">
+                                        <div class="card-block">
+                                            <h2 class="card-text">Podrick</h2>
+                                            <h1 class="card-text">Payne</h1>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-3">
+                                    <div class="card">
+                                        <img class="card-img-top" src="media/yohn.jpg" alt="Yohn Royce">
+                                        <div class="card-block">
+                                            <h2 class="card-text">Yohn</h2>
+                                            <h1 class="card-text">Royce</h1>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
