--- a/index.html
+++ b/index.html
@@ -94,53 +94,56 @@
                 <!-- People Section -->
                 <section class="people">
                     <div class="container">
-                        <h1 class="cinzel">People</h1>
-                        <div class="container">
-                            <div class="col-5">
+                        <div class="cinzel">
+                        <h1>People</h1>
+                    </div>
+                        <div class="col-5">
+                            <div class="card">
+                                <img class="card-img-top" src="media/cersei.jpg" alt="Cersei Lannister">
+                                <div class="card-img-overlay">
+                                    <h1 id="cersei-h1" class="card-text">Cersei</h1>
+                                    <h2 id="cersei-h2" class="card-text">Lannister</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-deck">
+                            <div class="col-3">
                                 <div class="card">
-                                    <img class="card-img-top" src="media/cersei.jpg" alt="Cersei Lannister">
-                                    <div class="card-img-overlay">
-                                        <h1 id="cersei-h1" class="card-text">Cersei</h1>
-                                        <h2 id="cersei-h2" class="card-text">Lannister</h2>
+                                    <img class="card-img-top" src="media/tyrion.jpg" alt="Tyrion Lannister">
+                                    <div class="card-block">
+                                        <h2 class="card-text">Tyrion</h2>
+                                        <h1 class="card-text">Lannister</h1>
+                                        <ul class="list-group">
+                                            <li class="list-group-item rounded-0">+</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-deck">
-                                <div class="col-3">
-                                    <div id="cersei-card" class="card">
-                                        <img class="card-img-top" src="media/tyrion.jpg" alt="Tyrion Lannister">
-                                        <div class="card-block">
-                                            <h2 class="card-text">Tyrion</h2>
-                                            <h1 class="card-text">Lannister</h1>
-                                        </div>
+                            <div class="col-3">
+                                <div class="card">
+                                    <img class="card-img-top" src="media/euron.jpg" alt="Euron Greyjoy">
+                                    <div class="card-block">
+                                        <h2 class="card-text">Euron</h2>
+                                        <h1 class="card-text">Greyjoy</h1>
                                     </div>
                                 </div>
-                                <div class="col-3">
-                                    <div class="card">
-                                        <img class="card-img-top" src="media/euron.jpg" alt="Euron Greyjoy">
-                                        <div class="card-block">
-                                            <h2 class="card-text">Euron</h2>
-                                            <h1 class="card-text">Greyjoy</h1>
-                                        </div>
+                            </div>
+                            <div class="w-100"></div>
+                            <div class="col-3">
+                                <div class="card">
+                                    <img class="card-img-top" src="media/podrick.jpg" alt="Podrick Payne">
+                                    <div class="card-block">
+                                        <h2 class="card-text">Podrick</h2>
+                                        <h1 class="card-text">Payne</h1>
                                     </div>
                                 </div>
-                                <div class="w-100"></div>
-                                <div class="col-3">
-                                    <div class="card">
-                                        <img class="card-img-top" src="media/podrick.jpg" alt="Podrick Payne">
-                                        <div class="card-block">
-                                            <h2 class="card-text">Podrick</h2>
-                                            <h1 class="card-text">Payne</h1>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-3">
-                                    <div class="card">
-                                        <img class="card-img-top" src="media/yohn.jpg" alt="Yohn Royce">
-                                        <div class="card-block">
-                                            <h2 class="card-text">Yohn</h2>
-                                            <h1 class="card-text">Royce</h1>
-                                        </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="card">
+                                    <img class="card-img-top" src="media/yohn.jpg" alt="Yohn Royce">
+                                    <div class="card-block">
+                                        <h2 class="card-text">Yohn</h2>
+                                        <h1 class="card-text">Royce</h1>
                                     </div>
                                 </div>
                             </div>
